--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sayam Kumar</title>
+  <title>Tshepo Serumula</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,14 +48,14 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/my_profile_pic.png" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Sayam Kumar</a></h1>
+        <img src="assets/img/Tshepo.jpg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Tshepo Serumula</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/SayamKu99536499" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/sayam.kumar.779/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/sayam28001/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://github.com/SayamAlt" class="google-plus"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/sayam-kumar/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/TSHEPO45715435" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <!-- <a href="https://www.facebook.com/sayam.kumar.779/" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+          <!-- <a href="https://www.instagram.com/sayam28001/" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+          <a href="https://github.com/Tshepo-Elifa-Serumula" class="google-plus"><i class="bx bxl-github"></i></a>
+          <a href="https://linkedin.com/in/tshepo-serumula/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -75,7 +75,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Sayam Kumar</h1>
+      <h1>Tshepo Serumula</h1>
       <p>I'm <span class="typed" data-typed-items="Data Scientist"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -88,32 +88,32 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm currently pursuing Bachelor of Technology in Computer Science Engineering in Dr. Akhilesh Das Gupta Institute of Technology and Management, a college affiliated with Guru Gobind Singh Indraprastha University. I am a self-driven student who is passionate in the fields of data analytics and data science. I like to play with data and derive some useful information and meaningful insights from it.</p>
+          <p>Astrophysics BSc graduate blending analytical rigor with programming enthusiasm. Accomplished in Physics, Mathematics (Statistics), and Computational Applied Mathematics. Proficient in Python, MATLAB, and Javascript. Geophysics graduate with a honours degree from the University of the Witwatersrand. Dedicated to unraveling geological complexities. Currently, I am advancing my skill set as a Data Scientist through learnership at ExploreAI. My role involves collaborating within a dynamic team to harness data-driven insights, develop machine-learning models, and craft informative visualizations. I am a self-driven student who is passionate in the fields of data analytics and data science. I like to play with data and derive some useful information and meaningful insights from it.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/cover_pic.png" class="img-fluid my_image" alt="">
+            <img src="assets/img/Tshepo_Cover_pic.jpg" class="img-fluid my_image" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Data Scientist</h3>
             <p class="fst-italic">
-              Skilled data scientist with almost a year of industry experience in collecting, organizing, interpreting, and disseminating various types of statistical figures. Energetic presenter and confident communicator with the ability to circulate information in a way that is clear, efficient, and beneficial for end users. Creative in finding solutions to problems and determining modifications for optimal use of organizational data. Expert at providing realistic projections and establishing various scenarios to determine viable process strategies to utilize. Organized and timely in providing staff, departmental members, and executive management with reports on specific data findings and their impact on organizational growth and success.
+              Skilled data scientist with almost a year of industry experience in collecting, organizing, interpreting, and disseminating various types of statistical figures. Energetic presenter and confident communicator with the ability to circulate information in a way that is clear, efficient, and beneficial for end users. Creative in finding solutions to problems and determining modifications for optimal use of organizational data. Enthusiastic at providing realistic projections and establishing various scenarios to determine viable process strategies to utilize. Organized and timely in providing staff, departmental members, and executive management with reports on specific data findings and their impact on organizational growth and success.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>28 Jan 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9810734544</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Delhi</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>India</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 Jul 1998</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 727910473</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pretoria</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Gauteng</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors of Technology</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span>sayamk565@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors of Astrophysics</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span>tshepoelifa238@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
