Added the Resume Section

--- a/index.html
+++ b/index.html
@@ -232,33 +232,33 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Sayam Kumar</h4>
+              <h4>Tshepo Serumula</h4>
               <p><em></em></p>
               <ul>
-                <li>Street No. 3, Nirankari Colony, DL</li>
-                <li>+91 9810734544</li>
-                <li>sayamk565@gmail.com</li>
+                <li>Street No. 523, De Kock ST, Pretoria</li>
+                <li>+27 727910473</li>
+                <li>tshepoelifa238@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Technology in Computer Science Engineering</h4>
-              <h5>2019 - 2023</h5>
-              <p><em>Dr. Akhilesh Das Gupta Institute of Technology and Management</em></p>
+              <h4>Bachelor of Astrophysics</h4>
+              <h5>2017 - 2020</h5>
+              <p><em>University of the Witwatersrand</em></p>
             </div>
             <div class="resume-item">
               <h4>High School</h4>
-              <h5>2017-2019</h5>
-              <p><em>Rosary Senior Secondary School</em></p>
+              <h5>2012-2016</h5>
+              <p><em>Mosepedi Secondary School</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Data Analyst</h4>
-              <h5>Oct 2021 - Dec 2021</h5>
-              <p><strong><em>ChefAtHome FoodTech LLP</em></strong></p>
+              <h4>Data Scientist</h4>
+              <h5>August 2023 - Dec 2023</h5>
+              <p><strong><em>Nedbank</em></strong></p>
               <h5>As an intern</h5>
               <ul>
                 <li>Performed exploratory data analysis (EDA) on several categories of food products in Chennai.</li>
@@ -268,13 +268,13 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Data Analyst</h4>
-              <h5>Sep 2021 - Nov 2021</h5>
-              <p><strong><em>Photoshooto</em></strong></p>
-              <h5>As an intern</h5>
+              <h4>Data Scientist</h4>
+              <h5>Jul 2023 - Aug 2021</h5>
+              <p><strong><em>BIS Data scientist</em></strong></p>
+              <h5>Vacation Work</h5>
               <ul>
                 <li>Cleaned all the datasets systematically and prepared them for analysis</li>
-                <li>Performed exploratory data analysis(EDA) on various photography related datasets and derived several business insights, observations and conclusions.</li>
+                <li>Performed exploratory data analysis(EDA) on various related datasets and derived several business insights, observations and conclusions.</li>
                 <li>Created reports based on all data findings.</li>
               </ul>
               <h5>As a Team Leader</h5>
@@ -285,13 +285,13 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Data Science & Business Analytics Internship</h4>
-              <h5>Sep 2021</h5>
-              <p><strong><em>The Sparks Foundation</em></strong></p>
+              <h4>Geophysicist</h4>
+              <h5>Jul 2022 - May 2023</h5>
+              <p><strong><em>ASST Group</em></strong></p>
               <ul>
-                <li>Explored and worked on various datasets based on global terrorism, sports and retail sales.</li>
-                <li>Performed exploratory data analysis(EDA) on all these datasets.</li>
-                <li>Derived several observations, business insights and conclusions.</li>
+                <li>Applied Refraction Seismics, Reflection Seismics, and Electrical Resistivity Imaging techniques in various survey projects.</li>
+                <li>Collaborated with field teams to acquire and process geophysical data.</li>
+                <li>Assisted in data processing and analysis tasks in the office to contribute to project outcomes.</li>
               </ul>
             </div>
             <div class="resume-item">
