Contact Us Page Added

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Sayam has got good data analytics skillset, his exploratory data analysis, and data visualization skills are impressive, that's the skill you look for in data analyst and he is well versed with it, he is self-motivated and organized - it was a pleasure working with him on a project.
+                  Tshepo has got good data analytics skillset, his exploratory data analysis, and data visualization skills are impressive, that's the skill you look for in data analyst and he is well versed with it, he is self-motivated and organized - it was a pleasure working with him on a project.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/shavilya.jpg" class="testimonial-img" alt="">
@@ -641,7 +641,7 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Sayam is a true example of how one can solve problems creatively.His knowledge in the domain of Python and data science is so versatile,that any project he works in will be really innovative and commendable.
+                  Tshepo is a true example of how one can solve problems creatively.His knowledge in the domain of Python and data science is so versatile,that any project he works in will be really innovative and commendable.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/sanjana.jpg" class="testimonial-img" alt="">
@@ -654,7 +654,7 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Sayam is the hardest working member of the group. He puts diligent efforts in the work he is allotted, and respects his deadlines to the core. He also offers help to other members in the team, if they are facing any difficulty, thereby acting as a wonderful team player. His data analytics and visualization skills are quite impressive. I learnt a lot while working with him.
+                  Tshepo is the hardest working member of the group. He puts diligent efforts in the work he is allotted, and respects his deadlines to the core. He also offers help to other members in the team, if they are facing any difficulty, thereby acting as a wonderful team player. His data analytics and visualization skills are quite impressive. I learnt a lot while working with him.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/vishal's image.gif" class="testimonial-img" alt="">
@@ -667,7 +667,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Sayam possesses very good technical skill sets and his area of expertise is mainly in data analytics and business intelligence. I have done a project with Sayam and he brings valuable insights to the project with his creativity, work ethic, and ability to drive project responsibly. He is self-motivated and organized - it was a great pleasure working with him.
+                  Tshepo possesses very good technical skill sets and his area of expertise is mainly in data analytics and business intelligence. I have done a project with Sayam and he brings valuable insights to the project with his creativity, work ethic, and ability to drive project responsibly. He is self-motivated and organized - it was a great pleasure working with him.
 
 I wish him success in all his future projects and endeavors.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
@@ -682,7 +682,7 @@ I wish him success in all his future projects and endeavors.
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  We've worked together on a project and Sayam Kumar is one of the best individuals to have as a partner. His project management and leadership skills along with his ability to solve complex and tedious problems on his own are some of his best qualities. Moreover, he is very enthusiastic and a hardworking person.
+                  We've worked together on a project and Tshepo Serumula is one of the best individuals to have as a partner. His project management and leadership skills along with his ability to solve complex and tedious problems on his own are some of his best qualities. Moreover, he is very enthusiastic and a hardworking person.
 
 He is well aware about how to help his colleagues and get the best out of them.
 
@@ -743,22 +743,22 @@ I highly recommend him because of his exceptional skills in data analytics and b
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>3/57, G.F., Street No. 3, Nirankari Colony, Delhi-110009</p>
+                <p>3/57, G.F., Street No. 523, Sunnyside, Pretoria</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>sayamk565@gmail.com</p>
+                <p>tshepoelifa238@gmail.com@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 9810734544</p>
+                <p>+27 727910473</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.125289482837!2d77.20366781488809!3d28.71580148705855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfe0864786131%3A0xbd43dcc46510729e!2sNirankari%20Colony%2C%20Mukherjee%20Nagar%2C%20Delhi%2C%20110009!5e0!3m2!1sen!2sin!4v1635181415076!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3593.43746292831!2d28.212086575322907!3d-25.75611027735549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95618dd4b32c81%3A0x86adf140930befdb!2s523%20De%20Kock%20St%2C%20Sunnyside%2C%20Pretoria%2C%200002!5e0!3m2!1sen!2sza!4v1693928383669!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             </div>
 
           </div>
