Editted the copyrite foot message

--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@ I highly recommend him because of his exceptional skills in data analytics and b
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">Sayam Kumar</a>
+        Designed by <a href="https://bootstrapmade.com/">Tshepo Serumula</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
