--- a/index.html
+++ b/index.html
@@ -243,6 +243,16 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
+              <h4>Higher Certificate in I.T Systems Development</h4>
+              <h5>Jan 2023 - Dec 2023</h5>
+              <p><em>ExploreAI</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor (Honors) of Geophysics</h4>
+              <h5>Jan 2022 - Dec 2022</h5>
+              <p><em>University of the Witwatersrand</em></p>
+            </div>
+            <div class="resume-item">
               <h4>Bachelor of Astrophysics</h4>
               <h5>2017 - 2020</h5>
               <p><em>University of the Witwatersrand</em></p>
