Added the resume section

--- a/index.html
+++ b/index.html
@@ -305,32 +305,32 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Data Scientist</h4>
-              <h5>Sep 2021</h5>
-              <p><strong><em>Lets Grow More</em></strong></p>
+              <h4>Project Intern</h4>
+              <h5>Mar 2022 - Aug 2022</h5>
+              <p><strong><em>Water Research Commission</em></strong></p>
               <ul>
-                <li>Performed iris flowers classification using various supervised and unsupervised machine learning techniques.</li>
-                <li>Forecasted stock market returns for the next 30 days using stacked LSTM.</li>
-                <li>Predicted species of iris flowers for any random data using decision tree algorithm.</li>
-                <li>Performed Exploratory Data Analysis(EDA) on Global Terrorism dataset.</li>
-                <li>Converted image to pencil sketch using Python.</li>
+                <li>Collaborated closely with the host team to investigate and implement data curation methods for enhanced quality and reliability.</li>
+                <li>Utilized ArcGIS Pro to create and analyze maps focused on assessing water availability in rivers and tracking the decline in water content.</li>
+                <li>Conducted thorough research leading to the production of a comprehensive report centered on water exploration and the meticulous curation of collected data.</li>
+                <!-- <li>Performed Exploratory Data Analysis(EDA) on Global Terrorism dataset.</li>
+                <li>Converted image to pencil sketch using Python.</li> -->
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Project Intern</h4>
-              <h5>Aug 2021</h5>
+              <h4>Codsoft Machine Learning Intern</h4>
+              <h5>Aug 2023 - Sep 2023</h5>
               <p><strong><em>iNeuron Technologies Private Limited</em></strong></p>
               <ul>
-                <li>Collaborated with 4 team members for project planning.</li>
-                <li>Allocated tasks and responsibilities to each team member.</li>
-                <li>Performed exploratory data analysis(EDA) on Amazon sales data.</li>
+                <li>Selected and created relevant features (input variables) from the raw data to improve the performance of machine learning models</li>
+                <!-- <li>Allocated tasks and responsibilities to each team member.</li> -->
+                <li>Performed exploratory data analysis(EDA) on four different projects data.</li>
                 <li>Derived discrete statistical insights for boosting up sales and enhancing net revenue.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Teaching Assistant of C++ Interview Preparation Course</h4>
-              <h5>Oct 2020 - Feb 2021</h5>
-              <p><strong><em>Coding Ninjas</em></strong></p>
+              <h4>Tutor</h4>
+              <h5>Jan 2022 - Dec 2023</h5>
+              <p><strong><em>TeachMe2</em></strong></p>
               <ul>
                 <li>Resolved doubts of students.</li>
                 <li>Mentored their progress throughout the course.</li>
