--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@ I highly recommend him because of his exceptional skills in data analytics and b
                 <p>+27 727910473</p>
               </div>
 
-              <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3593.43746292831!2d28.212086575322907!3d-25.75611027735549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95618dd4b32c81%3A0x86adf140930befdb!2s523%20De%20Kock%20St%2C%20Sunnyside%2C%20Pretoria%2C%200002!5e0!3m2!1sen!2sza!4v1693928383669!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3593.43746292831!2d28.212086575322907!3d-25.75611027735549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95618dd4b32c81%3A0x86adf140930befdb!2s523%20De%20Kock%20St%2C%20Sunnyside%2C%20Pretoria%2C%200002!5e0!3m2!1sen!2sza!4v1693930111496!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
