Added the testomial page

--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@
                   Tshepo has got good data analytics skillset, his exploratory data analysis, and data visualization skills are impressive, that's the skill you look for in data analyst and he is well versed with it, he is self-motivated and organized - it was a pleasure working with him on a project.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/shavilya.jpg" class="testimonial-img" alt="">
-                <h3>Shavilya Rajput</h3>
+                <img src="assets/img/testimonials/MK.jpg" class="testimonial-img" alt="">
+                <h3>Mkhanyisi Mlombile</h3>
                 <h4>Aspiring Data Scientist</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -654,8 +654,8 @@
                   Tshepo is a true example of how one can solve problems creatively.His knowledge in the domain of Python and data science is so versatile,that any project he works in will be really innovative and commendable.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/sanjana.jpg" class="testimonial-img" alt="">
-                <h3>Sanjana Prasad</h3>
+                <img src="assets/img/testimonials/Edna.jpg" class="testimonial-img" alt="">
+                <h3>Edna Kobo</h3>
                 <h4>Aspiring Data Scientist</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -667,8 +667,8 @@
                   Tshepo is the hardest working member of the group. He puts diligent efforts in the work he is allotted, and respects his deadlines to the core. He also offers help to other members in the team, if they are facing any difficulty, thereby acting as a wonderful team player. His data analytics and visualization skills are quite impressive. I learnt a lot while working with him.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/vishal's image.gif" class="testimonial-img" alt="">
-                <h3>Vishal Jhaveri</h3>
+                <img src="assets/img/testimonials/Ghaalib.jpg" class="testimonial-img" alt="">
+                <h3>Ghaalib Van Der Ross</h3>
                 <h4>Aspiring Data Analyst</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -682,8 +682,8 @@
 I wish him success in all his future projects and endeavors.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/sudiksha.jpg" class="testimonial-img" alt="">
-                <h3>Sudiksha</h3>
+                <img src="assets/img/testimonials/Katlego.jpg" class="testimonial-img" alt="">
+                <h3>Katlego Mthunzi</h3>
                 <h4>Aspiring Data Scientist</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -699,8 +699,8 @@ He is well aware about how to help his colleagues and get the best out of them.
 I highly recommend him because of his exceptional skills in data analytics and business intelligence.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/charu.jpg" class="testimonial-img" alt="">
-                <h3>Charu Chaudhary</h3>
+                <img src="assets/img/testimonials/Mpho.jpg" class="testimonial-img" alt="">
+                <h3>Mpho</h3>
                 <h4>Data Scientist</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -709,11 +709,11 @@ I highly recommend him because of his exceptional skills in data analytics and b
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Sayam is one of the most valuable people I've ever worked with. When you really get to connect with him, you will find an incredible person with exceptional skills!  Energetic and broad-minded data analyst - that's him! The success achieved in his job required extensive knowledge and dedication. I enjoyed working with him on the various tasks assigned to us.
+                  Tshepo is one of the most valuable people I've ever worked with. When you really get to connect with him, you will find an incredible person with exceptional skills!  Energetic and broad-minded data analyst - that's him! The success achieved in his job required extensive knowledge and dedication. I enjoyed working with him on the various tasks assigned to us.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/jenifa.jpg" class="testimonial-img" alt="">
-                <h3>Jenifa Thomas</h3>
+                <img src="assets/img/testimonials/Abidance.jpg" class="testimonial-img" alt="">
+                <h3>Abidance</h3>
                 <h4>Aspiring Data Scientist</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -753,7 +753,7 @@ I highly recommend him because of his exceptional skills in data analytics and b
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>3/57, G.F., Street No. 523, Sunnyside, Pretoria</p>
+                <p>Street No. 523, Sunnyside, Pretoria</p>
               </div>
 
               <div class="email">
