Added one project to the portfolio

--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/global_terrorism.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">EDA on Global Terrorism</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/TSF-Internship-Task-4/blob/main/Task%204.ipynb" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Twitter_Sentiment.jpg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Twitter Sentiment Classification</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Classification-predict-streamlit" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
