Movie Genre Classification project added.

--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/retail_sales.jpg" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">EDA on Retail Sales</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/TSF-Internship-Task-3/blob/main/EDA%20on%20Retail.ipynb" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Movie_Genre.jpeg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Movie Genre Classification</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Codsoft/tree/master/Task_1-Movie-Genre-Classification" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
