South African Language Identification added

--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/sports.jpg" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">EDA on Sports</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/TSF-Internship-Task-5/blob/main/Task%205.ipynb" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Language.png" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">South African Language Identification Hack 2023</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Language-Identification-Hack-2023" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
