Credit Card Fraud Detection Added.

--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/amazon_sales.jpg" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Amazon Sales Data Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/Amazon-Sales-Data-Analysis" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Credit.jpeg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Credit Card Classification With Machine Learning</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Machine-Learning/tree/master/Credit%20Score%20Classification" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
